fix shadow overflow issue in images

--- a/components/playground-list/index.scss
+++ b/components/playground-list/index.scss
@@ -32,6 +32,7 @@
     margin: 0 -24px;
     border-top: 1px solid #ccc;
     background: #eee;
+    overflow: hidden;
     &:before {
       display: block;
       content: "";
