--- a/components/project-list/index.scss
+++ b/components/project-list/index.scss
@@ -36,6 +36,7 @@
     margin: 0 -24px;
     border-top: 1px solid #ccc;
     background: #eee;
+    overflow: hidden;
     &:before {
       display: block;
       content: "";
